indistinguishable (almost; see `get-print-state') from a port on the
user level.

*** New function: port-with-print-state OUTPUT-PORT PRINT-STATE

Return a new port with the associated print state PRINT-STATE.

*** New function: get-print-state OUTPUT-PORT

Return the print state associated with this port if it exists,
otherwise return #f.

* Changes to the scm_ interface

** The internal representation of subr's has changed

Instead of giving a hint to the subr name, the CAR field of the subr
now contains an index to a subr entry in scm_subr_table.

*** New variable: scm_subr_table

An array of subr entries.  A subr entry contains the name, properties
and documentation associated with the subr.  The properties and
documentation slots are not yet used.

** A new scheme for "forwarding" calls to a builtin to a generic function

It is now possible to extend the functionality of some Guile
primitives by letting them defer a call to a GOOPS generic function on
argument mismatch.  This functionality is enabled with the GOOPS
primitive

  enable-primitive-generic! PRIMITIVE ...

It is then possible to extend the primitive(s) by defining methods for
them without loss of efficiency in normal evaluation.

Example:

  (use-modules (oop goops))
  (enable-primitive-generic! +)
  (define-method + ((x <string>) (y <string>))
    (string-append x y))

  + will still be as efficient as usual in numerical calculations, but
  can also be used for concatenating strings.

  Who will be the first one to extend Guile's numerical tower to
  rationals?  :)

*** New snarf macros for defining primitives: SCM_GPROC, SCM_GPROC1

  New macro: SCM_GPROC (CNAME, SNAME, REQ, OPT, VAR, CFUNC, GENERIC)

  New macro: SCM_GPROC1 (CNAME, SNAME, TYPE, CFUNC, GENERIC)

These do the same job as SCM_PROC and SCM_PROC1, but they also define
a variable GENERIC which can be used by the dispatch macros below.

[This is experimental code which may change soon.]
